/*
 * $Id: ChangeLog,v 1.420 2007-10-10 15:01:42 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2007-10-10 9:54 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  *source/h_windows.prg
  ! fixed onsize event only when windows is active 

2007-10-10 8:36 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  *source/h_tab.prg
   ! Fixed ::caption() and ::picture() methods, they did not work until now

2007-10-09 15:43 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  *source/h_tab.prg
  ! optimizing code

2007-10-08 16:31 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  *source/h_edit.prg

   the HB_string function are removed from all prgs because this function
   has diferent results in harbour and xharbour.

2007-10-08 15:50 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  *Source/h_label.prg
  *Source/h_grid.prg
  *source/h_menu.prg
  *source/h_textbox.prg
  *source/h_checkbox.prg
  *source/h_combo.prg
  *source/h_datepicker.prg
  *source/h_winddows.prg
  *source/h_controlmisc.prg
  *source/h_image.prg
  *source/h_hotkey.prg
  *source/winprint.prg
  *include/I_var.ch

   ! optimizing code and fixing harbour xharbour diferences
     types "C" and "CM" are not changed.

2007-10-07 13:18 UTC-0500 Miguel Angel Juarez A. <migsoft@oohg.org>
  * source/h_edit.prg
    ! optimized condition

2007-10-07 17:53 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_keybd.ch
  * source/h_hotkey.prg
  * source/h_windows.prg
    + ACCELERATOR hotkey added.

2007-10-07 13:18 UTC-0500 Miguel Angel Juarez A. <migsoft@oohg.org>
  * source/winprint.prg
    ! fix on button size of toolbar
  * source/h_edit.prg
    * added condition when is EOF and action when double click in browse

2007-10-07 08:56 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  *include/i_var.ch
   added translate  HB_ISCHAR => ISCHARACTER for xharbour
